fire video in readme

--- a/video_creator.ipynb
+++ b/video_creator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
     "import os\n",
     "\n",
     "image_folder = 'screenshots'\n",
-    "video_name = 'fire.mp4'\n",
+    "video_name = 'fire2.mp4'\n",
     "\n",
     "images = [img for img in os.listdir(image_folder) if img.endswith(\".png\")]\n",
     "frame = cv2.imread(os.path.join(image_folder, images[0]))\n",
@@ -31,6 +31,20 @@
     "\n",
     "cv2.destroyAllWindows()\n",
     "video.release()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import imageio.v2 as imageio\n",
+    "filenames = [img for img in os.listdir(image_folder) if img.endswith(\".png\")]\n",
+    "with imageio.get_writer('fire2.gif', mode='I', duration=1/24.0) as writer:\n",
+    "    for filename in filenames:\n",
+    "        image = imageio.imread(f\"{image_folder}/{filename}\")\n",
+    "        writer.append_data(image)"
    ]
   }
  ],
